Making some changes to mappings and changing the theme

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -18,7 +18,8 @@
   ],
   "emmet.showExpandedAbbreviation": "always",
   "emmet.includeLanguages": {
-    "javascript": "javascriptreact"
+    "javascript": "javascriptreact",
+    "typescript": "html"
   },
   "prettier.eslintIntegration": true,
   "prettier.tslintIntegration": true,
