Changed default theme and pairs and closetag plugin

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -18,5 +18,6 @@
     "javascript": "javascriptreact",
     "typescript": "html"
   },
-  "yank.highlight.duration": 200
+  "yank.highlight.duration": 300,
+  "pairs.enableCharacters": ["(", "[", "{", "'", "\"", "`"]
 }
